# davekral

./: LICENSE  README.md
Automatizace tvoření youtube shorts/: READ.me  gemini_test.py
Automatizace tvoření youtube shorts/ImageMagick-7.1.1-Q16-HDRI/: NOTICE.txt  configure.xml
Detekce síly odpalu v golfu/: ColorTaker.py  ConturesFinder.py  Main.py  README.md  TextDetection.py
Jednoduchá databáze esport hráčů/: EsportStatistics.sql  README.md
Počítání příkladů/: README.md  neuron_counting.ipynb
Průzkum bludiště/: README.md  robot-code.txt
Rozdělení dvourozměrných dat/: README.md  rozdelni.ipynb
Vizualizace a ovládání REST API rakety/: CMakeLists.txt  MyWidget.cpp  MyWidget.h  README.md  main.cpp
Webová vizualizace/: README.md  server.py  users.db  users.py
Webová vizualizace/faceid/output/: embeddings.pickle  le.pickle  recognizer.pickle
Webová vizualizace/static/: bonus_red.html  humidity_red.html  humidity_template.html  illumination_red.html  illumination_template.html  index.html  index1.html  login.html  team_red.html  team_template.html  temperature_red.html  temperature_template.html
